[Fix]Prevent report contents overflowed without scroll
메모 보고의 길이가 늘어날 경우 스크롤 없이 아래까지 넘치는 오류 수정

--- a/front-end/web-next/styles/MemoReport.module.css
+++ b/front-end/web-next/styles/MemoReport.module.css
@@ -34,7 +34,13 @@
 
 .contentLayout {
     width: 100%;
-    overflow: auto
+    height: calc(100% - 220px);
+    overflow: auto;
+}
+
+.cardListLayout {
+    width: 100%;
+    padding: 0 10px;
 }
 
 .memoFooter {
